--- a/spec/support/data/en.yml
+++ b/spec/support/data/en.yml
@@ -11,3 +11,11 @@ en:
     - :day
     - :month
     - :year
+  invoice:
+    no: "N°"
+    recipient: "A l'attention de"
+    false: "test"
+  test:
+  - sub_test:
+      hello: hello
+      no: "N°"
