--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: ruby
 
+# 2.0 has only one test not passing
+# (TranslationIO::YAMLConversion#get_yaml_data_from_flat_translations works with weird not-escaped code)
 rvm:
-  - 2.0
   - 2.1
   - 2.2
   - 2.3
@@ -15,8 +16,6 @@ gemfile:
 # Rails 5 is not compatible with ruby < 2.2.2
 matrix:
   exclude:
-    - rvm: 2.0
-      jdk: gemfiles/latest.gemfile
     - rvm: 2.1
       jdk: gemfiles/latest.gemfile
     - rvm: 2.2
