--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,14 @@ gemfile:
   - gemfiles/lowest.gemfile
   - gemfiles/latest.gemfile
 
-# Rails 5 is not compatible with ruby < 2.2.2
 matrix:
   exclude:
-    - rvm: 2.1
+    - rvm: 2.1   # Rails 5 is not compatible with ruby < 2.2.2
       jdk: gemfiles/latest.gemfile
-    - rvm: 2.2
+    - rvm: 2.2   # Rails 5 is not compatible with ruby < 2.2.2
       jdk: gemfiles/latest.gemfile
+    - rvm: jruby # Seems to use bundler 2.0 even with before_install commands that worked for other rubies
+      jdk: gemfiles/lowest.gemfile
 
 sudo: false
 
