--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,10 @@ sudo: false
 # To stay on bundler 1 for compatibility with rails 4.1
 before_install:
   - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
-  - gem install bundler -v '< 2'
+  - gem install bundler -v '1.17.3'
+
+# Override to be able to force bundler 1, needed for lowest.gemfile
+install: bundle _1.17.3_ install --jobs=3 --retry=3
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
