Enables yaml generation to drop keys with blank values #37 (thanks @Uepsilon !)

--- a/spec/support/data/en.yml
+++ b/spec/support/data/en.yml
@@ -4,7 +4,9 @@ en:
     menu:
       stuff: "This is stuff"
   bye: "Good bye world"
-  empty: " "
+  empty:
+  empty_string: ""
+  space: " "
   symbol: :hello
   date:
     order:
