--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ rvm:
   - 2.6
   - 2.7
   - 3.0
+  - 3.1
   - jruby-head
 
 gemfile:
@@ -29,6 +30,8 @@ matrix:
     - rvm: 2.7
       gemfile: gemfiles/lowest.gemfile
     - rvm: 3.0
+      gemfile: gemfiles/lowest.gemfile
+    - rvm: 3.1
       gemfile: gemfiles/lowest.gemfile
     - rvm: jruby-head
       gemfile: gemfiles/lowest.gemfile # Work on dev but error "no such file to load -- racc/info" on Travis (jruby 9.3.0.0-SNAPSHOT)
