Fix test with different plural forms depending on GetText versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ rvm:
   - 2.6
   - 2.7
   - 3.0
-  - 3.1
   - jruby-head
+#  - 3.1 (uncomment when ready on travis)
 
 gemfile:
   - gemfiles/lowest.gemfile
@@ -31,10 +31,10 @@ matrix:
       gemfile: gemfiles/lowest.gemfile
     - rvm: 3.0
       gemfile: gemfiles/lowest.gemfile
-    - rvm: 3.1
-      gemfile: gemfiles/lowest.gemfile
     - rvm: jruby-head
       gemfile: gemfiles/lowest.gemfile # Work on dev but error "no such file to load -- racc/info" on Travis (jruby 9.3.0.0-SNAPSHOT)
+    # - rvm: 3.1
+    #   gemfile: gemfiles/lowest.gemfile
 
 sudo: false
 
