--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
         run: ruby --version
       - name: Execute tests
         run: bundle exec rspec
-      - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v2.2.4
-          env:
-            CC_TEST_REPORTER_ID: 945dfb58a832d233a3caeb84e3e6d3be212e8c7abcb48117fce63b9adcb43647
+#      - name: Test & publish code coverage
+#        uses: paambaati/codeclimate-action@v3.0.0
+#          env:
+#            CC_TEST_REPORTER_ID: 945dfb58a832d233a3caeb84e3e6d3be212e8c7abcb48117fce63b9adcb43647
