Use gemfiles from matrix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,9 +27,8 @@ jobs:
             gemfile: gemfiles/lowest.gemfile
           - ruby: 3.0
             gemfile: gemfiles/lowest.gemfile
-          - ruby: 3.2
-            gemfile: gemfiles/lowest.gemfile
     env:
+      BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
       CC_TEST_REPORTER_ID: 945dfb58a832d233a3caeb84e3e6d3be212e8c7abcb48117fce63b9adcb43647
     steps:
       - uses: actions/checkout@v2
@@ -41,9 +40,6 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # runs bundle install and caches installed gems automatically
           bundler: ${{ env.BUNDLER_VERSION || 'latest' }}
-#      - run: curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-#      - run: chmod +x ./cc-test-reporter
-#      - run: ./cc-test-reporter before-build
       - run: ruby --version
       - name: Execute tests
         run: bundle exec rspec
