--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,10 +36,10 @@ jobs:
       - name: Setup Bundler 1.x for Rails 4.x
         if: ${{ matrix.gemfile == 'lowest' }}
         run: echo "BUNDLER_VERSION=1.17.3" >> $GITHUB_ENV
-      - run: gem update --system 3.2.3
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
+          rubygems: latest
           bundler-cache: true # runs bundle install and caches installed gems automatically
           bundler: ${{ env.BUNDLER_VERSION || 'latest' }}
       - run: ruby --version
