--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,25 +9,26 @@ jobs:
       fail-fast: false
       matrix:
         ruby:
-          - 2.2
-          - 2.3
-          - 2.4
-          - 2.5
-          - 2.6
-          - 2.7
-          - 3.0
-          - 3.1
-          - jruby-9.1.17.0
+          - '2.2'
+          - '2.3'
+          - '2.4'
+          - '2.5'
+          - '2.6'
+          - '2.7'
+          - '3.0'
+          - '3.1'
+          - '3.2'
+          - 'jruby-9.1.17.0'
         gemfile:
           - lowest
           - latest
         exclude:
           # Ruby > 2.6 removed BigDecimal.new which was used on Rails 4.1 (removed with Rails 4.2 though)
-          - ruby: 2.7
+          - ruby: '2.7'
             gemfile: lowest
-          - ruby: 3.0
+          - ruby: '3.0'
             gemfile: lowest
-          - ruby: 3.1
+          - ruby: '3.1'
             gemfile: lowest
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
