--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
           - '3.0'
           - '3.1'
           - '3.2'
+          - '3.3.0-preview1'
           - 'jruby-9.1.17.0'
         gemfile:
           - lowest
