--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
           - '3.0'
           - '3.1'
           - '3.2'
-          - '3.3.0-preview1'
+          - '3.3'
           - 'jruby-9.1.17.0'
         gemfile:
           - lowest
@@ -32,7 +32,7 @@ jobs:
             gemfile: lowest
           - ruby: '3.2'
             gemfile: lowest
-          - ruby: '3.3.0-preview1'
+          - ruby: '3.3'
             gemfile: lowest
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
