--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,11 @@ jobs:
           - '3.0'
           - '3.1'
           - '3.2'
-          - '3.3.0-preview1'
+          - '3.3'
+          - '3.4.0-preview1'
           - 'jruby-9.1.17.0'
+          - 'jruby-9.2'
+          - 'jruby-9.3'
         gemfile:
           - lowest
           - latest
@@ -32,7 +35,9 @@ jobs:
             gemfile: lowest
           - ruby: '3.2'
             gemfile: lowest
-          - ruby: '3.3.0-preview1'
+          - ruby: '3.3'
+            gemfile: lowest
+          - ruby: '3.4.0-preview1'
             gemfile: lowest
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
