--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,9 @@ jobs:
           - '3.2'
           - '3.3'
           - '3.4'
-          - 'jruby-9.1.17.0'
-          - 'jruby-9.2'
           - 'jruby-9.3'
+          - 'jruby-9.4'
+          - 'jruby-head'
         gemfile:
           - lowest
           - latest
