--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,10 @@ jobs:
             gemfile: lowest
           - ruby: '3.4'
             gemfile: lowest
+          - ruby: 'jruby-9.4' # Java::JavaLang::StackOverflowError
+            gemfile: lowest
+          - ruby: 'jruby-head' # Java::JavaLang::StackOverflowError
+            gemfile: lowest
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
       CC_TEST_REPORTER_ID: 945dfb58a832d233a3caeb84e3e6d3be212e8c7abcb48117fce63b9adcb43647
